new Integer constructor invocation is replaced by static method calls.